<resources>
    <string name="app_name">Android Exercises</string>
    <string name="itemLifeCycle_main">Actividad de Ciclo de Vida</string>
    <string name="itemIntents_main">Actividad de Intenciones</string>
    <string name="btnCall_Intents">Llamar</string>
    <string name="btnSMS_Intent">Enviar SMS</string>
    <string name="btnEmail_Intent">Enviar Email</string>
    <string name="btnWebSite_Intent">Abrir sitio</string>
    <string name="btnSimple_Snackbar">Snackbar simple</string>
    <string name="btnCustom_Snackbar">Snackbar Personalizado</string>
    <string name="itemSnackbar_main">Actividad de Snackbar</string>
    <string name="btnAction_Snackbar">Snackbar con accion</string>
</resources>